# janus-monitor

./: .gitignore  CHANGELOG.md  ENCRYPTION_DOCUMENTATION.md  KEY_ROTATION_DOCUMENTATION.md  README.md  Roadmap  SECURE_KEY_STORAGE_DOCUMENTATION.md  SECURE_LOGGING_DOCUMENTATION.md  generate-icons.sh  index.html  package-lock.json  package.json  security-report.json  test_pin_functions.js  test_secure_logging.rs
.github/workflows/: security-scan.yml
scripts/: dependency-management.js  dependency-management.mjs
src/: ARCHITECTURE_MIGRATION_COMPLETE.md  App.jsx  App.jsx.backup  COMPLETION_SUMMARY.md  CategoryManager.jsx  DEPENDENCY_MANAGEMENT.md  FINAL_MIGRATION_SUMMARY.md  FIXES_SUMMARY.md  INTEGRATIONS_ARCHITECTURE.md  INTEGRATION_STATUS.md  LAST_FIX_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  MONERO_INTEGRATION.md  PendingTransactionsPanel.jsx  SECURITY_CHANGES_SUMMARY.md  SECURITY_IMPROVEMENTS.md  SECURITY_SUMMARY.md  TokenSearch.jsx  apiClient.js  privateCoinIntegration.js  run_monero_tests.js  run_security_tests.js  secureBackend.js  secureBackend.js.backup  security-report.json  securityTests.js  styles.css  test_monero_integration.js  test_monero_rust_backend.sh  write_pivx_module.py
src-tauri/: Cargo.toml  Cargo.toml.before_fix  tauri.conf.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: input_validation.rs  lib.rs  lib.rs.backup  lib.rs.before_fix  lib.rs.before_tokens  lib.rs.v1.backup  main.rs  monero_integration.rs  pin_security.rs  pivx_integration.rs  secure_key_storage.rs  totp_security.rs
src/assets/: generate_solarpunk_bg.py
(+15 files in other folders)
