[package]
name = "janus-monitor"
version = "2.3.0"
description = "JANUS Strategy - Crypto Reserve Monitor"
authors = ["JANUS"]
edition = "2021"

[lib]
name = "janus_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"

# Security: Cryptography dependencies
sodiumoxide = "0.2"  # Modern crypto library (libsodium bindings)
argon2 = { version = "0.5", features = ["std"] }  # Password hashing
hex = "0.4"  # For key serialization
lazy_static = "1.4"  # For static initialization
once_cell = "1.19"  # For once-cell initialization

# 2FA / TOTP
totp-rs = { version = "5", features = ["otpauth"] }

# Monero integration
thiserror = "1.0"  # For custom error types

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
